Implementation changes to room classes; added implementation for the GameWorld class